...
          readOnly={readonly}
          onChangeText={updateMinutes}
          onBlur={resetValues}
        />
        <Separator />
        <DurationField
          testID="duration-editor-seconds"
          unit="s"
          value={seconds}
          readOnly={readonly}
          onChangeText={updateSeconds}
          onBlur={resetValues}
        />
...
